--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-hover table-inverse">
+ <table class='table table-hover table-inverse'>
   <thead>
     <tr>
       <th></th>
@@ -9,7 +9,7 @@
   </thead>
 
   <tbody>
-    <% @books.each do |book| %>
+    <% books.each do |book| %>
     <tr>
       <td>
         <%= link_to (book.user) do %>
@@ -30,6 +30,6 @@
 
       <td>コメント数：<%= book.book_comments.count %></td>
     </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
