--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,45 +12,8 @@
 
 	<div class="col-xs-9">
 		<h2>Books</h2>
-		<!--books一覧 -->
-<table class="table table-hover table-inverse">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @books.each do |book| %>
-    <tr>
-      <td>
-        <%= link_to (book.user) do %>
-          <%= attachment_image_tag(book.user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %><br>
-          <%= book.user.name %>
-        <% end %>
-      </td>
-
-      <td><%= link_to book.title, book %></td>
-
-      <td><%= book.body %></td>
-
-      <td>
-        <div id="favorite_btn_<%= book.id %>">
-          <%= render 'favorites/favorite', {book: book} %>
-        </div>
-      </td>
-
-      <td>コメント数：<%= book.book_comments.count %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-
-		<!--books一覧 -->
-
+    <%= render 'index', books: @books%>
 
 	</div>
 </div>
