--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,91 +2,55 @@
 	<div class="col-xs-3">
 
 		<h2>User info</h2>
-		<%= render 'users/profile', user: @user %>
+		<%= render 'users/profile', user: @book.user %>
 
 		<h2>New book</h2>
 		<%= render 'books/newform', book: @new_book %>
 
 	</div>
 
-	<div class="col-xs-9">
+  <div class='col-xs-9'>
 		<h2>Book detail</h2>
+		<table class='table'>
+		  <tr>
+        <td><%= link_to(@book.user) do %>
+          <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %><br>
+          <%= @book.user.name %>
+          <% end %>
+        </td>
+        <td><%= link_to @book.title, @book %></td>
+        <td><%= @book.body %></td>
+        <!-- いいね機能 -->
+        <td>
+            <% if @book.favorited_by?(current_user) %>
+                <%= link_to book_favorites_path(@book), method: :delete do %>
+                <i><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></i>
+                <%= @book.favorites.count %>
+                <% end %>
+            <% else %>
+                <%= link_to book_favorites_path(@book), method: :post do %>
+                <i><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span></i>
+                <%= @book.favorites.count %>
+                <% end %>
+            <% end %>
+        </td>
+        <td>コメント数：<%= @book.book_comments.count %></td>
 
-		<table class="table">
-				<tr>
-					<td>
-						<%= link_to (@book.user) do %>
-						<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
-						<%= @book.user.name %>
-						<% end %>
-					</td>
-					<td><%= link_to @book.title, @book %></td>
-					<td><%= @book.body %></td>
-						<!--お気に入り -->
-						<% if @book.favorited_by?(current_user) %>
-							<td>
-    						<%= link_to book_favorites_path(@book), method: :delete do %>
-    						<i><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></i>
-    						<%= @book.favorites.count %>
-    					    </td>
-    						<% end %>
-						<% else %>
-							<td>
-    						<%= link_to book_favorites_path(@book), method: :post do %>
-    						<i><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span></i>
-    						<%= @book.favorites.count %>
-    						</td>
-    						<% end %>
-						<% end %>
-						<!--お気に入り -->
+        <% if @book.user == current_user %>
+          <td><%= link_to 'Edit', edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
+          <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+        <% end %>
+      </tr>
+    </table>
 
-						<!--コメント数 -->
-				  		<td>
-							<%= "コメント数：#{@book.book_comments.count}" %>
-						</td>
-						<!--コメント数 -->
+        <div id="comments_area">
+            <%= render partial: 'book_comments/index', locals: { book_comments: @book_comments } %>
+        </div>>
 
-					<% if @book.user == current_user %>
-						<td><%= link_to "Edit",edit_book_path, class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-						<td><%= link_to "Destroy",book_path, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
-					<% end %>
-				</tr>
-			</table>
+        <div class="comment-form">
+		      <%= render 'book_comments/form', locals: { book: @book } %>
+        </div>
 
-		<!--コメント -->
-		<ol>
-    		<% @book.book_comments.each do |book_comment| %>
-        		<li class="comment">
-            		<div class="comment-body bb">
-                		<div class="comment-text">
-                    		<div class="comment-author clearfix">
-                        		<a href="#" class="link-author"><%= book_comment.user.name %></a>
-                        		<span class="comment-meta">
-                        		<span class="comment-date"><%= book_comment.created_at.strftime('%Y/%m/%d') %></span>
-                        		</span>
-                    		</div>
-                    		<div class="comment-entry"><%= book_comment.comment %></div>
-                		</div>
-            		</div>
-						<% if @book.user == current_user %>
-						<%= link_to "削除",book_book_comments_path(book_comment), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger" %>
-					<% end %>
-        		</li>
-    		<% end %>
-		</ol>
-		<!--コメント -->
-
-
-
-　　　　　<!--コメントフォーム -->
-		<%= form_for [@book, @book_comment] do |f| %>
-    		<div class="row">
-        		<div class="col-sm-12">
-            		<%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
-            	</div>
-    		</div>
-    		<%= f.submit "送信", class: "btn btn-sm btn-default pull-right" %>
-		<% end %>
-
+  </div>
 </div>
 
