--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,5 @@
-$("#favorite_btn_<%= @book.id %>").html("<%= j(render partial: 'favorites/favorite', locals: { book: @book }) %>");
+if (location.pathname == '/books') {
+  $(".book_<%= @book.id %>").html("<%= j(render 'books/book',  book: @book ) %>")
+} else {
+  $(".book_<%= @book.id %>").html("<%= j(render 'books/detail',  book: @book ) %>")
+}
