--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -10,26 +10,9 @@
 
   <tbody>
     <% books.each do |book| %>
-    <tr>
-      <td>
-        <%= link_to (book.user) do %>
-          <%= attachment_image_tag(book.user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %><br>
-          <%= book.user.name %>
-        <% end %>
-      </td>
-
-      <td><%= link_to book.title, book %></td>
-
-      <td><%= book.body %></td>
-
-      <td>
-        <div id="favorite_btn_<%= book.id %>">
-          <%= render 'favorites/favorite', {book: book} %>
-        </div>
-      </td>
-
-      <td>コメント数：<%= book.book_comments.count %></td>
-    </tr>
+      <tr class="book_<%= book.id %>">
+        <%= render '/books/book', book: book %>
+      </tr>
   <% end %>
   </tbody>
 </table>
