--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,54 +1,29 @@
 <div class="row">
 	<div class="col-xs-3">
-
 		<h2>User info</h2>
 		<%= render 'users/profile', user: @book.user %>
-
 		<h2>New book</h2>
-		<%= render 'books/newform', book: @new_book %>
-
+		<%= render 'newform', book: @new_book %>
 	</div>
 
   <div class='col-xs-9'>
 		<h2>Book detail</h2>
 		<table class='table'>
-		  <tr>
-        <td><%= link_to(@book.user) do %>
-          <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %><br>
-          <%= @book.user.name %>
-          <% end %>
-        </td>
-        <td><%= link_to @book.title, @book %></td>
-        <td><%= @book.body %></td>
-        <!-- いいね機能 -->
-        <td>
-            <% if @book.favorited_by?(current_user) %>
-                <%= link_to book_favorites_path(@book), method: :delete do %>
-                <i><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></i>
-                <%= @book.favorites.count %>
-                <% end %>
-            <% else %>
-                <%= link_to book_favorites_path(@book), method: :post do %>
-                <i><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span></i>
-                <%= @book.favorites.count %>
-                <% end %>
-            <% end %>
-        </td>
-        <td>コメント数：<%= @book.book_comments.count %></td>
-
-        <% if @book.user == current_user %>
-          <td><%= link_to 'Edit', edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-          <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn-sm btn-danger destroy_book_#{@book.id}"%></td>
-        <% end %>
+      <tr class="book_<%= @book.id %>">
+        <%= render 'detail', book: @book %>
       </tr>
     </table>
 
-        <div id="comments_area">
-            <%= render partial: 'book_comments/index', locals: { book_comments: @book_comments } %>
-        </div>>
-
+    <table class="show-tb comment_<%= @book.id %>">
+      <%= render 'comment', book_comments: @book.book_comments %>
+    </table>
         <div class="comment-form">
-		      <%= render 'book_comments/form', locals: { book: @book } %>
+          <%= form_with(model: [@book, @book_comment], url: book_book_comments_path(@book) ) do |f| %>
+            <div class="form-group row">
+              <%= f.text_area :comment, size: "90x5" %>
+              <%= f.submit "送信"%>
+            </div>
+          <% end %>
         </div>
 
   </div>
